--- a/app/src/main/res/layout/fragment_create_channel.xml
+++ b/app/src/main/res/layout/fragment_create_channel.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.CreateChannelFragment">
+    tools:context=".ui.fragments.CreateChannelFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
