--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -26,4 +26,42 @@
         <item name="material_drawer_header_selection_subtext">@color/material_drawer_dark_header_selection_subtext</item>
         <item name="material_drawer_legacy_style">false</item> <!-- Enables legacy Material 1 style -->
     </style>
+
+    <!-- Settings -->
+    <style name="settings_item_large">
+        <item name="android:paddingTop">@dimen/padding_horizontal</item>
+        <item name="android:paddingStart">@dimen/padding_vertical</item>
+        <item name="android:background">@drawable/item_ripple_effect</item>
+        <item name="android:focusable">true</item>
+        <item name="android:clickable">true</item>
+    </style>
+
+    <style name="settings_item_icon">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+    </style>
+
+    <style name="settings_item_name_text">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/text_medium</item>
+        <item name="android:layout_marginStart">@dimen/horizontal_large_margin</item>
+    </style>
+
+    <style name="settings_item_change_text">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:textColor">@color/grey</item>
+        <item name="android:textSize">@dimen/text_small</item>
+        <item name="android:layout_marginStart">@dimen/horizontal_large_margin</item>
+    </style>
+
+    <style name="settings_item_divider">
+        <item name="android:layout_height">@dimen/divider_height</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:background">@color/grey</item>
+        <item name="android:layout_marginTop">@dimen/vertical_medium_margin</item>
+        <item name="android:layout_marginStart">@dimen/horizontal_large_margin</item>
+    </style>
 </resources>
