--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragments.SettingsFragment"
-    android:background="@color/grey">
+    android:background="@color/greyLight">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/settings_header"
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/colorPrimary">
+        android:background="@color/primary">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/settings_profile_image"
@@ -23,7 +23,7 @@
             android:src="@drawable/ic_default_user_photo"
             app:civ_circle_background_color="@color/white"
             android:layout_marginStart="@dimen/horizontal_margin"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="@dimen/vertical_medium_margin"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
@@ -49,7 +49,7 @@
             android:text="@string/user_online"
             app:layout_constraintStart_toEndOf="@+id/settings_profile_image"
             app:layout_constraintTop_toBottomOf="@+id/settings_user_name"
-            android:textColor="@color/grey"
+            android:textColor="@color/greyLight"
             android:textSize="@dimen/text_small"
             android:layout_marginStart="@dimen/horizontal_margin"
             />
@@ -218,6 +218,114 @@
             app:layout_constraintStart_toStartOf="@+id/settings_notify_text"
             app:layout_constraintBottom_toBottomOf="@+id/settings_item_notify"
             app:layout_constraintEnd_toEndOf="@+id/settings_item_notify"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/settings_item_data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/settings_item_large"
+        app:layout_constraintTop_toBottomOf="@+id/settings_item_notify"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageView
+            android:id="@+id/settings_data_icon"
+            style="@style/settings_item_icon"
+            android:src="@drawable/ic_data_usage"
+            app:layout_constraintTop_toTopOf="@id/settings_item_data"
+            app:layout_constraintStart_toStartOf="@id/settings_item_data"
+            />
+
+        <TextView
+            android:id="@+id/settings_data_text"
+            style="@style/settings_item_name_text"
+            android:text="@string/settings_data_text"
+            app:layout_constraintTop_toTopOf="@id/settings_data_icon"
+            app:layout_constraintBottom_toBottomOf="@id/settings_data_icon"
+            app:layout_constraintStart_toEndOf="@id/settings_data_icon"
+            />
+
+        <View
+            style="@style/settings_item_divider"
+            app:layout_constraintTop_toBottomOf="@+id/settings_data_text"
+            app:layout_constraintStart_toStartOf="@+id/settings_data_text"
+            app:layout_constraintBottom_toBottomOf="@+id/settings_item_data"
+            app:layout_constraintEnd_toEndOf="@+id/settings_item_data"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/settings_item_privacy"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/settings_item_large"
+        app:layout_constraintTop_toBottomOf="@+id/settings_item_data"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageView
+            android:id="@+id/settings_privacy_icon"
+            style="@style/settings_item_icon"
+            android:src="@drawable/ic_privacy"
+            app:layout_constraintTop_toTopOf="@id/settings_item_privacy"
+            app:layout_constraintStart_toStartOf="@id/settings_item_privacy"
+            />
+
+        <TextView
+            android:id="@+id/settings_privacy_text"
+            style="@style/settings_item_name_text"
+            android:text="@string/settings_privacy_text"
+            app:layout_constraintTop_toTopOf="@id/settings_privacy_icon"
+            app:layout_constraintBottom_toBottomOf="@id/settings_privacy_icon"
+            app:layout_constraintStart_toEndOf="@id/settings_privacy_icon"
+            />
+
+        <View
+            style="@style/settings_item_divider"
+            app:layout_constraintTop_toBottomOf="@+id/settings_privacy_text"
+            app:layout_constraintStart_toStartOf="@+id/settings_privacy_text"
+            app:layout_constraintBottom_toBottomOf="@+id/settings_item_privacy"
+            app:layout_constraintEnd_toEndOf="@+id/settings_item_privacy"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/settings_item_themes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/settings_item_large"
+        app:layout_constraintTop_toBottomOf="@+id/settings_item_privacy"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageView
+            android:id="@+id/settings_themes_icon"
+            style="@style/settings_item_icon"
+            android:src="@drawable/ic_theme"
+            app:layout_constraintTop_toTopOf="@id/settings_item_themes"
+            app:layout_constraintStart_toStartOf="@id/settings_item_themes"
+            />
+
+        <TextView
+            android:id="@+id/settings_themes_text"
+            style="@style/settings_item_name_text"
+            android:text="@string/settings_themes_text"
+            app:layout_constraintTop_toTopOf="@id/settings_themes_icon"
+            app:layout_constraintBottom_toBottomOf="@id/settings_themes_icon"
+            app:layout_constraintStart_toEndOf="@id/settings_themes_icon"
+            />
+
+        <View
+            style="@style/settings_item_divider"
+            app:layout_constraintTop_toBottomOf="@+id/settings_themes_text"
+            app:layout_constraintStart_toStartOf="@+id/settings_themes_text"
+            app:layout_constraintBottom_toBottomOf="@+id/settings_item_themes"
+            app:layout_constraintEnd_toEndOf="@+id/settings_item_themes"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
