--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="popupTheme">@style/actionMenu</item>
 
         <!-- MaterialDrawer specific values -->
         <item name="material_drawer_background">@color/material_drawer_background</item>
@@ -25,6 +26,11 @@
         <item name="material_drawer_header_selection_text">@color/material_drawer_header_selection_text</item>
         <item name="material_drawer_header_selection_subtext">@color/material_drawer_dark_header_selection_subtext</item>
         <item name="material_drawer_legacy_style">false</item> <!-- Enables legacy Material 1 style -->
+    </style>
+
+    <style name="actionMenu" parent="Theme.AppCompat.Light">
+        <item name="background">@color/white</item>
+        <item name="actionMenuTextColor">@color/black</item>
     </style>
 
     <!-- Settings -->
@@ -60,7 +66,7 @@
     <style name="settings_item_divider">
         <item name="android:layout_height">@dimen/divider_height</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:background">@color/grey</item>
+        <item name="android:background">@color/greyLight</item>
         <item name="android:layout_marginTop">@dimen/vertical_medium_margin</item>
         <item name="android:layout_marginStart">@dimen/horizontal_large_margin</item>
     </style>
