--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,7 @@
     <dimen name="settings_profile_image_border_width">2dp</dimen>
     <dimen name="settings_profile_image_width">55dp</dimen>
     <dimen name="setting_profile_image_height">55dp</dimen>
+    <dimen name="bg_stroke_width">1dp</dimen>
+    <dimen name="bg_corners_radius">4dp</dimen>
+    <dimen name="padding_medium_vertical">8dp</dimen>
 </resources>
