--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="popupTheme">@style/actionMenu</item>
+        <item name="android:colorControlActivated">@color/primary</item>
 
         <!-- MaterialDrawer specific values -->
         <item name="material_drawer_background">@color/material_drawer_background</item>
@@ -69,5 +70,12 @@
         <item name="android:background">@color/greyLight</item>
         <item name="android:layout_marginTop">@dimen/vertical_medium_margin</item>
         <item name="android:layout_marginStart">@dimen/horizontal_large_margin</item>
+    </style>
+
+    <style name="toolbarTheme">
+        <item name="android:theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">?attr/actionBarSize</item>
+        <item name="android:background">@color/primary</item>
     </style>
 </resources>
