--- a/app/src/main/res/layout/fragment_register_enter_code.xml
+++ b/app/src/main/res/layout/fragment_register_enter_code.xml
@@ -22,14 +22,18 @@
 
     <EditText
         android:id="@+id/register_enter_code_input_code"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/register_enter_code_sent_text"
         android:layout_margin="@dimen/horizontal_margin"
-        android:padding="@dimen/padding_horizontal"
         android:background="@drawable/bg_edit_text_selector"
+        android:hint="@string/edit_text_hint_enter_code"
         android:inputType="number"
+        android:padding="@dimen/padding_horizontal"
         android:textColor="@color/black"
+        android:textColorHint="@color/grey"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/register_enter_code_sent_text"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
