--- a/app/src/main/res/layout/fragment_register_enter_phone.xml
+++ b/app/src/main/res/layout/fragment_register_enter_phone.xml
@@ -19,6 +19,8 @@
         android:inputType="phone"
         android:textSize="@dimen/text_large"
         android:textColor="@color/black"
+        android:hint="@string/edit_text_hint_phone_number"
+        android:textColorHint="@color/grey"
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
