--- a/app/src/main/res/layout/fragment_register_enter_code.xml
+++ b/app/src/main/res/layout/fragment_register_enter_code.xml
@@ -11,7 +11,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/register_enter_code_sent_code"
-        android:textColor="@color/black"
         android:textSize="@dimen/text_large"
         android:textStyle="bold"
         android:layout_marginTop="@dimen/vertical_medium_margin"
@@ -22,15 +21,12 @@
 
     <EditText
         android:id="@+id/register_enter_code_input_code"
+        style="@style/editTextDefaultTheme"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_margin="@dimen/horizontal_margin"
-        android:background="@drawable/bg_edit_text_selector"
         android:hint="@string/edit_text_hint_enter_code"
         android:inputType="number"
-        android:padding="@dimen/padding_horizontal"
         android:textColor="@color/black"
-        android:textColorHint="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/register_enter_code_sent_text"
