--- a/app/src/main/res/layout/fragment_register_enter_phone.xml
+++ b/app/src/main/res/layout/fragment_register_enter_phone.xml
@@ -4,35 +4,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.fragments.RegisterEnterPhoneFragment">
+    tools:context=".ui.fragments.RegisterEnterPhoneFragment"
+    android:layout_marginHorizontal="@dimen/horizontal_margin">
 
     <EditText
         android:id="@+id/register_enter_phone_edit_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/editTextDefaultTheme"
+        android:inputType="phone"
+        android:textSize="@dimen/text_large"
+        android:hint="@string/edit_text_hint_phone_number"
+        android:layout_marginTop="@dimen/vertical_medium_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="@dimen/horizontal_margin"
-        android:padding="@dimen/padding_medium_vertical"
-        android:background="@drawable/bg_edit_text_selector"
-        android:inputType="phone"
-        android:textSize="@dimen/text_large"
-        android:textColor="@color/black"
-        android:hint="@string/edit_text_hint_phone_number"
-        android:textColorHint="@color/grey"
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/register_enter_phone_btn_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="@dimen/horizontal_margin"
         android:src="@drawable/ic_navigate_next"
         android:backgroundTint="@color/primary"
         app:borderWidth="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
