--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -29,7 +29,7 @@
             />
 
         <TextView
-            android:id="@+id/settings_user_name"
+            android:id="@+id/settings_fullname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/default_user_name"
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:text="@string/user_online"
             app:layout_constraintStart_toEndOf="@+id/settings_profile_image"
-            app:layout_constraintTop_toBottomOf="@+id/settings_user_name"
+            app:layout_constraintTop_toBottomOf="@+id/settings_fullname"
             android:textColor="@color/greyLight"
             android:textSize="@dimen/text_small"
             android:layout_marginStart="@dimen/horizontal_margin"
